app/assets/stylesheets/custom.css.scss
/* ... */
.tab-content-current {
	border-radius: 5px 5px 0 0;
	background-color: #fefefe;
	border-top: 1px solid #ccc;
	border-left: 1px solid #ccc;
	border-right: 1px solid #ccc;
	border-bottom: 1px solid #fff;
	background-position: center;
	z-index:3;

}

.tab-right-shadow {
	-webkit-box-shadow: 4px -3px 21px -9px rgba(204,204,204,1);
-moz-box-shadow: 4px -3px 21px -9px rgba(204,204,204,1);
box-shadow: 4px -3px 21px -9px rgba(204,204,204,1);
}

.tab-left-shadow {
/*	-webkit-box-shadow: -4px -3px 21px -9px rgba(204,204,204,1);
-moz-box-shadow: -4px -3px 21px -9px rgba(204,204,204,1);
box-shadow: -4px -3px 21px -9px rgba(204,204,204,1);*/
}


/*--- Settings Menu ---*/


#settingsmenu {
	/* Border Radius */
	border-radius: 0 0 5px 5px; 
	-moz-border-radius: 0 0 5px 5px;
	-webkit-border-radius: 0 0 5px 5px;
	display: none;
	margin: 8px -122px;
	background-color: #ffffff;
	border: 1px solid #cccccc;
	width:128px;
	height:auto;
	/* Border Shadow */
	-moz-box-shadow: 0px 0px 40px #e5f9ff;
	-webkit-box-shadow: 0px 0px 40px #e5f9ff;
	box-shadow: 0px 0px 40px #e5f9ff;
	z-index:-5;
	position: absolute;

}

.settingsinner {
	border: 0px;
		position:auto;
		border:0px;
		padding: 5px 0 5px 0;
		border: 1px solid transparent;
		&:hover{
			background-color:#2297ce;
			border: 1px solid #0676ab;
			/* Shadow */
			box-shadow: 0px 0px 5px rgb(255, 255, 255); /* The Fallback */
			box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.11);
			a { min-width: 128px;
				color:#ffffff;
				text-decoration:none;
			}
		}

	a { width: auto;
		color:#888888;
	}

}

.settings-btn-settings {
	padding: 6px 68px 6px 10px;
}

.settings-btn-signout {
     padding: 6px 65px 6px 10px;
}

.settingsinner-last{
	border-top: 1px solid #e2e2e2;
	@extend .settingsinner;
	/* Border Radius */
	border-radius: 0 0 5px 5px; 
	-moz-border-radius: 0 0 5px 5px;
	-webkit-border-radius: 0 0 5px 5px;
}


#settingsbox {
	float:right;
	position: auto;
	margin: -26px 0 0 0;
	padding: 0;
	z-index: 3;
}

.home {
	margin: 0 6px 0 0;
}

#namebox {
	@extend #settingsbox;
	margin: -21px 10px 0 0;
	color: #f1f1f1;
	a{	
		font-size:1em;
		color:#999999;
		&:hover {
			color:#666666;
			text-decoration: none;
		}
	}
}

#signinbox {

}

/*--- Fullscreen Mode---*/

.fullscreen_mode {
	display: none;
	position: absolute; 
	top: 0; 
	left: 0 ;
	width:100% ;
    height:100% ;
    z-index:100;
    background-color: #fff;
}

.fullscreen-wrapper {
	padding: 100px;
}

.fullscreen-title {
	margin-left: auto;
	margin-right: auto;
	width: 750px;
	text-align: center;
	font-family: "Droid Serif",Georgia,Cambria,"Times New Roman",Times,serif;
	font-size: 2.6em;
}


.fullscreen-author {
	margin-left: auto;
	margin-right: auto;
	margin-top: 20px;
	padding-bottom: 20px;
	width: 750px;
	text-align: center;
	font-family: "Droid Serif",Georgia,Cambria,"Times New Roman",Times,serif;
	font-size: 1.3em;
	border-bottom: 1px solid #e2e2e2;
	a {
		color: #333;
		&:hover {
			color: #999;
			text-decoration: none;
		}
	}	
}


.fullscreen-author-small {
	margin-left: auto;
	margin-right: auto;
	margin-top: 20px;
	width: 750px;
	text-align: center;
	font-family: Georgia, serif;
	font-size: 1.2em;
	margin-bottom: -10px;
	a {
		color: #333;
		&:hover {
			color: #999;
			text-decoration: none;
		}
	}	
}

.fullscreen-chapter {
		margin-left: auto;
	margin-right: auto;
	width: 750px;
	text-align: center;
	font-family: "Droid Serif",Georgia,Cambria,"Times New Roman",Times,serif;
	font-size: 2em;
	padding-top: 45px;
	a {
		color: #333;
		&:hover {
			color: #999;
			text-decoration: none;
		}
	}
}

.fullscreen-content {
	margin-left: auto;
	margin-right: auto;
	width: 790px;
	font-size: 1.6em;
	color: #333;
	/*font-size: 1.1em;*/
	line-height: 1.6em;
	font-family: "Droid Serif",Georgia,Cambria,"Times New Roman",Times,serif;
	/*font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'GNU Unifont', Verdana, Helvetica, sans-serif;*/
	p {
		margin: 1.6em;
		line-height: 1.6em;
	}
}

.fullscreen-content-inner {
	margin: 10px 20px 20px 20px;
	pre {
		margin: 0 15px 0 15px;
		
	}
}

.fullscreen-toolbox {

}

.fullscreen-next {
	height: 25px;
	width: 25px;
	float: right;
	background-image: url(/assets/next.png);
	background-position: top;
	&:hover{
		background-position: center;
	}
	&:active{
		background-position: bottom;
	}
}

.fullscreen-prev {
	height: 25px;
	width: 25px;
	float: right;
	background-image: url(/assets/prev.png);
	background-position: top;
	&:hover{
		background-position: center;
	}
	&:active{
		background-position: bottom;
	}
}

.fullscreen-exit {
	cursor: pointer;
	height: 25px;
	width: 25px;
	float: right;
	background-image: url(/assets/fullscreen_exit.png);
	background-position: top;
	&:hover{
		background-position: center;
	}
	&:active{
		background-position: bottom;
	}
}

/*--- Errors ---*/

.control-group.error input,
.control-group.error select,
.control-group.error textarea {
  border-color: #cccccc;
  outline: 0;
  outline: thin dotted \9;

  /* Error Shadow*/
    /* Error Shadow*/
 		-webkit-box-shadow: inset 0px 0px 4px 1px rgba(247,247,247,1);
	-moz-box-shadow: inset 0px 0px 4px 1px rgba(247,247,247,1);
	box-shadow: inset 0px 0px 4px 1px rgba(247,247,247,1);
}

.control-group.error input[type="majorpost"],input[type="user-inspirer"] {
  border-color: #cccccc;
  outline: 0;
  outline: thin dotted \9;

    /* Error Shadow*/
 		-webkit-box-shadow: inset 0px 0px 4px 1px rgba(247,247,247,1);
	-moz-box-shadow: inset 0px 0px 4px 1px rgba(247,247,247,1);
	box-shadow: inset 0px 0px 4px 1px rgba(247,247,247,1);
}

.message {
	color: #ffffff;
	display: inline;
	position: absolute;
	float:left;
	white-space:nowrap;
	margin: 1px 0 0 20px;
	padding: 5px 10px 5px 10px;
	background-color:rgba(0, 0, 0, 0.75);
	border:0;
	@extend .radius;
}

div.field_with_errors div.ui-effects-wrapper {
  display: inline-block !important;
}

.field_with_errors {
	@extend .control-group;
	@extend .error
}

/*--- Alerts ---*/

.outer-center {
	float: right;
	right: 50%;
	position: absolute;
}
/* ... */

